--- a/index.Rmd
+++ b/index.Rmd
@@ -2,7 +2,9 @@
 title: "Analysis of Workout Technique"
 author: "Alex E"
 date: "February 2, 2018"
-output: html_document
+output: 
+  html_document: 
+    keep_md: yes
 ---
 
 ## Acknowledgement
